--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           <img src="images/portfolio/mud.png" alt="portfolio-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="#!">view project</a>
+              <a class="btn btn-light btn-sm" href="https://github.com/Halfarn/Test-Based-Adventure">view project</a>
             </div>
           </div>
         </div>
