--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
           </div>
           <div>
-            <p class="text-dark mb-1">2000</p>
+            <p class="text-dark mb-1">2008-2015</p>
             <h4>GCSEs</h4>
             <p class="mb-0 text-light">St. Augustine's RC High School</p>
           </div>
