--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <img src="images/experience/icon-2.png" alt="icon">
         <p class="mb-0">Sept 2019 - Sept 2022</p>
         <h4>ESL Teacher</h4>
-        <h6 class="text-light">Chungdahm Insitute, <br>South Korea</h6>
+        <h6 class="text-light">Chungdahm Institute, <br>South Korea</h6>
       </div>
       <div class="col-lg-3 col-md-4 text-center">
         <img src="images/experience/icon-3.png" alt="icon">
