--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-11 mx-auto">
-        <h1 class="text-white font-tertiary">Hi! <br> I'm Rhys! <br> Software Engineer</h1>
+        <h1 class="text-white font-tertiary">Rhys Williams <br> Software Engineer</h1>
       </div>
     </div>
   </div>
