Fixed contact page and formatting on various other pages.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Rhys Williams | Portfolio</title>
+  <title>Rhys Williams | Home</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
