--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Kross - Creative Portfolio Template</title>
+  <title>Rhys Williams | Contact</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -42,7 +42,7 @@
 
 <header class="navigation fixed-top">
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/logo.png" alt="Myself" height="20"width="20"></a>
+    <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/logo.png" alt="Rhys Williams"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
       aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -137,10 +137,10 @@
           <h5 class="text-light">Discord</h5>
           <p class="text-white paragraph-lg font-secondary">Halfarn#4821</p>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <h5 class="text-light">Address</h5>
           <p class="text-white paragraph-lg font-secondary">125/A, CA Commercial Area, California, USA</p>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
