--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           <img src="images/portfolio/mud.png" alt="portfolio-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="https://github.com/Halfarn/Test-Based-Adventure" target="_blank">view project</a>
+              <a class="btn btn-light btn-sm" href="https://github.com/Halfarn/Test-Based-Adventure" target="_blank">Python MUD<br>Starter Project</a>
             </div>
           </div>
         </div>
@@ -344,7 +344,7 @@
           <img src="images/portfolio/pong.png" alt="portfolio-image" class="img-fluid rounded w-100" width="100" height="200">
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="https://halfarn.github.io/pong/" target="_blank">view project</a>
+              <a class="btn btn-light btn-sm" href="https://halfarn.github.io/pong/" target="_blank">Pong<br>Self Study</a>
             </div>
           </div>
         </div>
@@ -354,22 +354,22 @@
           <img src="images/portfolio/wdme.png" alt="portfolio-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="https://maryanos.github.io/web-dev-made-easy/" target="_blank">view project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--<div class="col-lg-4 col-6 mb-4 shuffle-item">
-        <div class="position-relative rounded hover-wrapper">
-          <img src="images/portfolio/item-4.png" alt="portfolio-image" class="img-fluid rounded w-100">
-          <div class="hover-overlay">
-            <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="#!">view project</a>
+              <a class="btn btn-light btn-sm" href="https://maryanos.github.io/web-dev-made-easy/" target="_blank">WebDevMadeEasy<br>Group Project</a>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-6 mb-4 shuffle-item">
+        <div class="position-relative rounded hover-wrapper">
+          <img src="images/portfolio/rdr2.jpg" alt="portfolio-image" class="img-fluid rounded w-100">
+          <div class="hover-overlay">
+            <div class="hover-content">
+              <a class="btn btn-light btn-sm" href="https://halfarn.github.io/rdr2/" target="_blank">RDR2 Inflation Calculator<br>Self Study</a>
+            </div>
+          </div>
+        </div>
+      </div>
+     <!-- <div class="col-lg-4 col-6 mb-4 shuffle-item">
         <div class="position-relative rounded hover-wrapper">
           <img src="images/portfolio/item-5.png" alt="portfolio-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
