--- a/portfolio.html
+++ b/portfolio.html
@@ -142,17 +142,17 @@
           </div>
         </div>
       </div>
-     <!--<div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;design&quot;,&quot;branding&quot;]">
+     <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;design&quot;,&quot;javascript&quot;]">
         <div class="position-relative rounded hover-wrapper">
-          <img src="images/portfolio/item-6.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
+          <img src="images/portfolio/rdr2.jpg" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="#!">view project</a>
+              <a class="btn btn-light btn-sm" href="https://halfarn.github.io/rdr2/" target="_blank">RDR2 Inflation Calculator<br>Self Study</a>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;illustration&quot;]">
+      <!--<div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;illustration&quot;]">
         <div class="position-relative rounded hover-wrapper">
           <img src="images/portfolio/item-8.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
           <div class="hover-overlay">
